second set of updates

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./resources/style.css">
   </head>
   <body>
-    <span id="Header">
+    <div class="Header">
     <h1>
       Broadway Design
     </h1>
@@ -27,7 +27,54 @@
     <h2>
       Contact
     </h2>
-    </span>
+  </div>
+    <h3>
+      Our Processes
+    </h3>
+    <h4>
+      Identify
+    </h4>
+    <img src="./resources/images/identify.svg" alt="identify">
+    <h4>
+      Understand
+    </h4>
+    <img src="./resources/images/understand.svg" alt="understand">
+    <h4>
+      Execute
+    </h4>
+    <img src="./resources/images/execute.svg" alt="execute">
+    <h4>
+      Designed in New York
+    </h4>
+    <h4>
+      Porfolio
+    </h4>
+    <h4>
+      Team
+    </h4>
+    <h4>
+      Contact
+    </h4>
+    <p>
+      Phone: 0207 000 123
+    </p>
+    <p>
+      Email: Test@example.com
+    </p>
+    <p>
+      Twitter @test
+    </p>
+    <div class="Footer">
+      <p>
+        &copy;Broadway 2017
+        Home
+        About
+        Work
+        Team
+        Contact
+      </p>
+    </div>
+    </p>
 
   </body>
 </html>
